# cinebert-api

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  repo_map.txt
api/: Dockerfile  main.py  requirements.txt
src/cine_bert/: cuda_check.py  inference.py  train.py
tests/: test_api.py  test_data.py  test_model.py
